# code-lends

codelens/: .env.example  CodeLens-MVP-实施计划.md  Dockerfile  README.md  TEST_REPORT.md  docker-compose.yml  pyproject.toml  run  use
codelens/src/codelens/: cli.py  config.py
codelens/src/codelens/agents/: __init__.py  code_agent.py  review_agent.py
codelens/src/codelens/analysis/: __init__.py  impact.py  regression.py  risk.py
codelens/src/codelens/api/: __init__.py  server.py
codelens/src/codelens/graph/: __init__.py  models.py  query.py  store.py
codelens/src/codelens/parsers/: __init__.py  common.py  frontend_parser.py  java_parser.py  markdown_parser.py  python_parser.py
codelens/src/codelens/reporting/: __init__.py  html.py
codelens/tests/: test_api.py  test_cli.py  test_graph_store.py  test_impact.py
codelens/tests/parsers/: test_frontend_parser.py  test_java_parser.py  test_markdown_parser.py  test_python_parser.py
demo-project/.codelens/: graph.json  report.html  report.json
demo-project/backend/app/: auth.py  main.py  orders.py  users.py
demo-project/frontend/: package.json
demo-project/frontend/src/app/login/: page.tsx
demo-project/frontend/src/app/orders/: page.tsx
demo-project/frontend/src/app/users/: page.tsx
demo-project/frontend/src/components/: LoginForm.tsx
demo-project/frontend/src/lib/: api.ts
