[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codelens"
version = "0.1.0"
description = "Frontend project graph and requirement impact analysis MVP"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
codelens = "codelens.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]
